Adds some sidebar link-action

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Central Virginia Ruby Enthusiasts Group (CVREG)</h1>
-        <p class="header">Group website</p>
-
-
+        <p class="header">Richmond's Premiere Ruby Users Group</p>
 
         <ul>
+          <li><a href="http://www.804rva.com/" title="804RVA">&gt; Meeting Location</a></li>
+          <li><a href="https://groups.google.com/forum/?fromgroups#!forum/cvruby" title="Mailing List">&gt; Google Group</a></li>
+          <li><a href="https://twitter.com/cvreg" title="Twitter">&gt; Twitter</a></li>
           <li><a class="buttons github" href="https://github.com/cvreg">GitHub Profile</a></li>
         </ul>
 
