Announces October's meeting

--- a/index.html
+++ b/index.html
@@ -18,17 +18,30 @@
       <header>
         <h1 class="header">Central Virginia Ruby Enthusiasts Group (CVREG)</h1>
         <p class="header">Richmond's Premiere Ruby Users Group</p>
-
         <ul>
           <li><a href="http://www.804rva.com/" title="804RVA">&gt; Meeting Location</a></li>
           <li><a href="https://groups.google.com/forum/?fromgroups#!forum/cvruby" title="Mailing List">&gt; Google Group</a></li>
           <li><a href="https://twitter.com/cvreg" title="Twitter">&gt; Twitter</a></li>
           <li><a class="buttons github" href="https://github.com/cvreg">GitHub Profile</a></li>
         </ul>
-
       </header>
       <section>
-        <h3>Welcome to CVREG</h3>
+        <h2>Welcome to the CVREG!</h2>
+        <h3>October Meeting: Hacking the Ruby Object Model with John Feminella</h3>
+        <h4>Details</h4>
+        <p>
+          <ul>
+            <li>Date: Tuesday, Oct 09</li>
+            <li>Time: 18:00-20:00</li>
+            <li>Place: 804RVA, 1657 West Broad Street #3a, Richmond, VA (<a href="http://maps.google.com/maps?q=1657+West+Broad+Street+%233a%2C+Richmond%2C+VA">map</a>)</li>
+            <li>RSVP: <a href="http://www.meetup.com/804-Richmond/events/qxnqzcyqnbmb/">Meetup.com</a></li>
+        <p>
+        <h4>Abstract</h4>
+        <p>The first step to knowing a little more about the car you're driving is to pop the hood. In this talk, we'll take a look under the covers of Ruby's MRI C implementation to discover how the sausage is made. Along the way, we'll see exactly what happens when you define a class method (Ruby doesn't have class methods), extend an object (nothing about that object changes at all), or invoke a method that doesn't exist (#method_missing? is more complicated than you think).</p>
+        <p>Disclaimer: the practical value afforded by this talk will hover somewhere between `ivory-tower doddering` and `intellectual masturbation`.</p>
+        <h4>Bio</h4>
+        <p>John Feminella is the CTO of Cardagin Networks. Follow him on Twitter: <a href="https://twitter.com/superninjarobot">@superninjarobot</a> </p>
+        
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
