Adds GA information

--- a/index.html
+++ b/index.html
@@ -35,19 +35,30 @@
             <li>Time: 18:00-20:00</li>
             <li>Place: 804RVA, 1657 West Broad Street #3a, Richmond, VA (<a href="http://maps.google.com/maps?q=1657+West+Broad+Street+%233a%2C+Richmond%2C+VA">map</a>)</li>
             <li>RSVP: <a href="http://www.meetup.com/804-Richmond/events/qxnqzcyqnbmb/">Meetup.com</a></li>
-        <p>
+          </ul>
+        </p>
         <h4>Abstract</h4>
         <p>The first step to knowing a little more about the car you're driving is to pop the hood. In this talk, we'll take a look under the covers of Ruby's MRI C implementation to discover how the sausage is made. Along the way, we'll see exactly what happens when you define a class method (Ruby doesn't have class methods), extend an object (nothing about that object changes at all), or invoke a method that doesn't exist (#method_missing? is more complicated than you think).</p>
         <p>Disclaimer: the practical value afforded by this talk will hover somewhere between `ivory-tower doddering` and `intellectual masturbation`.</p>
         <h4>Bio</h4>
         <p>John Feminella is the CTO of Cardagin Networks. Follow him on Twitter: <a href="https://twitter.com/superninjarobot">@superninjarobot</a> </p>
-        
+
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-768316-1");
+        pageTracker._setDomainName(".cvreg.org");
+        pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
   </body>
 </html>
