Updates the website with January meeting information

--- a/index.html
+++ b/index.html
@@ -27,36 +27,27 @@
       </header>
       <section>
         <h2>Welcome to the CVREG!</h2>
-        <h3>December Meeting: Year-end Social at Legend Brewing Co.</h3>
+        <h3>January Meeting: The Intuitive Programmer by Russ Olsen</h3>
         <h4>Details</h4>
         <p>
           <ul>
-            <li>Date: Tuesday, Dec 11</li>
+            <li>Date: Tuesday, Jan 15</li>
             <li>Time: 18:00-20:00</li>
-            <li>Place: Legend Brewing Co, 321 West 7th Street, Richmond, VA (<a href="http://goo.gl/maps/qleF7">map</a>)</li>
-            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/88695162/">Meetup.com</a></li>
+            <li>Place: 1657 West Broad Street #3a, Richmond, VA (<a href="http://goo.gl/maps/HX2PY">map</a>)</li>
+            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/92707022/">Meetup.com</a></li>
           </ul>
         </p>
-        <h3>Social Time!</h3>
-        <p>Come out and have a beer or two with the rest of the group while we reflect on 2012 and dream about 2013.</p>
-        <p>It's been an eventful year for CVREG but now it's time to relax and prepare for the holidays. To our newest members: come on out and tell us how we can help you learn more about Ruby. To our long-time members: come on out and share your experiences. I know there are a few of us lucky enough to work full time with Ruby; how were you able to do it. Also, come with your ideas for meetings you'd like to see. But most of all: come on out and enjoy the company. See you there!</p>
-        <p>Remember to bring a friend and spread the word.</p>
         
-        <h3>Upcoming Meetings</h3>
-        <p>A sneak peek at start of the 2013 schedule:</p>
-        <h4>Russ Olsen</h4>
-        <p>...of Eloquent Ruby fame will be stopping by sometime in January; we're finalizing the date and topic.</p>
-        <h4>John Feminella</h4>
-        <p>...will be giving us a tour of Ruby 2.0's features in February.</p>
-        <h4>Ryan Castillo</h4>
-        <p>...is currently penciled in for March where he'll present an updated version of his "year of TDD and BDD" talk.</p>
-        <h4>April and beyond</h4>
-        <p>Right now we're completely open and would love your feedback on this: what speaker would you like to see? what topic interests you? Give us your feedback on the mailing list so we can get to work making it a reality. And, please, do remember about our Hack nights!</p>
+        <h3>Insight, Intuituion and Programming</h3>
+        <p>
+        We programmers tend to think of ourselves as concrete, logical thinkers. We work from step 1 to step 2 through to step N. So we say. But real life is not like that: One minute you have no idea how the new design will come together and the next, well, there it is. One minute you haven't a clue as to why the program is doing *that* and the next it is all just obvious. And we have all seen code that is wonderful -- or horrible -- in some indescribable way.</p>
+        <p>
+        In this talk Russ Olsen will explore the role of insight and intuition in programming: How does intuition work? How do you generate more of those AH-HA moments? And when should you ignore that voice whispering into your inner ear?</p>
         
-        <h3>Thanks!</h3>
-        <p>Hopefully I speak for Jeremy and Chris when I say: thanks to everyone in this group for supporting us and sticking with us through this very eventful year. I feel we found a very good partner in 804RVA; it's been a huge benefit to having our meetings in a stable location. They've allowed us to (finally) get our Hack Night up and running.</p>
-        <p>Thanks, again. And enjoy the rest of the year. Be safe, have fun, and we'll see you at the meetings...</p>
-        <p>Chris Allport, Mel Riffe, Jeremy Weiland</p>
+        <h3>Russ Olsen</h3>
+        <a target="_blank" href="https://twitter.com/russolsen" title="Twitter Profile"><img src="https://twimg0-a.akamaihd.net/profile_images/2137888485/russ.jpeg" alt="Picture of Mr. Olsen"/></a>
+        <p>
+        <a target="_blank" href="http://russolsen.com">Russ Olsen</a> likes to think that technology is there to solve problems for people, not the other way around.</p>
 
       </section>
       <footer>
