Announces February's meeting details

--- a/index.html
+++ b/index.html
@@ -27,27 +27,31 @@
       </header>
       <section>
         <h2>Welcome to the CVREG!</h2>
-        <h3>January Meeting: The Intuitive Programmer by Russ Olsen</h3>
+        <h3>February Meeting: Ruby 2.0 Review by John Feminella</h3>
         <h4>Details</h4>
         <p>
           <ul>
-            <li>Date: Tuesday, Jan 15</li>
+            <li>Date: Tuesday, Feb 12</li>
             <li>Time: 18:00-20:00</li>
             <li>Place: 1657 West Broad Street #3a, Richmond, VA (<a href="http://goo.gl/maps/HX2PY">map</a>)</li>
-            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/92707022/">Meetup.com</a></li>
+            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/102137862/">Meetup.com</a></li>
           </ul>
         </p>
         
-        <h3>Insight, Intuituion and Programming</h3>
+        <h3>Ruby Two: A Whirlwind Tour</h3>
         <p>
-        We programmers tend to think of ourselves as concrete, logical thinkers. We work from step 1 to step 2 through to step N. So we say. But real life is not like that: One minute you have no idea how the new design will come together and the next, well, there it is. One minute you haven't a clue as to why the program is doing *that* and the next it is all just obvious. And we have all seen code that is wonderful -- or horrible -- in some indescribable way.</p>
-        <p>
-        In this talk Russ Olsen will explore the role of insight and intuition in programming: How does intuition work? How do you generate more of those AH-HA moments? And when should you ignore that voice whispering into your inner ear?</p>
+          <em>"Ch-ch-Changes<br/>
+          Just gonna have to be a different man<br/>
+          Time may change me<br/>
+          But I can't trace time"<br/></em>
+          <strong>-- David Bowie, Changes</strong></p>
+
+        <p>In this talk, we'll explore the biggest new features introduced by Ruby 2.0, along with some examples of when and where they might be useful. Refinements, kwargs (yay Python!), and other new friends will be joining the Ruby family. We'll also talk about some of the biggest pain points you're likely to experience during an upgrade, and how to mitigate the hurt.
+        </p>
         
-        <h3>Russ Olsen</h3>
-        <a target="_blank" href="https://twitter.com/russolsen" title="Twitter Profile"><img src="https://twimg0-a.akamaihd.net/profile_images/2137888485/russ.jpeg" alt="Picture of Mr. Olsen"/></a>
-        <p>
-        <a target="_blank" href="http://russolsen.com">Russ Olsen</a> likes to think that technology is there to solve problems for people, not the other way around.</p>
+        <h3>John Feminella</h3>
+        <p>John Feminella is the co-founder of <a href="http://uphex.com/">UpHex</a>, a bootstrapped startup trying to shine a light into the darkness of customer analytics for online businesses. You can follow him on Twitter <a href="http://twitter.com/superninjarobot">here</a>.
+        </p>
 
       </section>
       <footer>
