March meeting announcement

--- a/index.html
+++ b/index.html
@@ -27,30 +27,37 @@
       </header>
       <section>
         <h2>Welcome to the CVREG!</h2>
-        <h3>February Meeting: Ruby 2.0 Review by John Feminella</h3>
+        <h3>March Meeting: Hacking Communications by Ryan Castillo</h3>
         <h4>Details</h4>
         <p>
           <ul>
-            <li>Date: Tuesday, Feb 12</li>
+            <li>Date: Tuesday, Mar 12</li>
             <li>Time: 18:00-20:00</li>
             <li>Place: 1657 West Broad Street #3a, Richmond, VA (<a href="http://goo.gl/maps/HX2PY">map</a>)</li>
-            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/102137862/">Meetup.com</a></li>
+            <li>RSVP: <a href="http://www.meetup.com/804RVA/events/105746362/">Meetup.com</a></li>
           </ul>
         </p>
-        
-        <h3>Ruby Two: A Whirlwind Tour</h3>
-        <p>
-          <em>"Ch-ch-Changes<br/>
-          Just gonna have to be a different man<br/>
-          Time may change me<br/>
-          But I can't trace time"<br/></em>
-          <strong>-- David Bowie, Changes</strong></p>
 
-        <p>In this talk, we'll explore the biggest new features introduced by Ruby 2.0, along with some examples of when and where they might be useful. Refinements, kwargs (yay Python!), and other new friends will be joining the Ruby family. We'll also talk about some of the biggest pain points you're likely to experience during an upgrade, and how to mitigate the hurt.
+        <h3>Hacking Communications</h3>
+        <h4>How to ge on the same page as your (Manager, Boss, Client, Coworker, or Self)</h4>
+        <p>
+          Have you ever been forced into a corner for an estimate? Looked at git
+          blame and wondered how to resolve the issue with the original author?
+          Or wanted to be considered a 'consultant' instead of another technical
+          cog in your client's business? The common pitfall in these situations
+          is your ability communicate. In this talk we'll take a look at this
+          fundamental skill, hack your brain to look at some of these situations
+          differently and bring you out as a more effective communicator and
+          therefore more awesome developer/human being.
         </p>
-        
-        <h3>John Feminella</h3>
-        <p>John Feminella is the co-founder of <a href="http://uphex.com/">UpHex</a>, a bootstrapped startup trying to shine a light into the darkness of customer analytics for online businesses. You can follow him on Twitter <a href="http://twitter.com/superninjarobot">here</a>.
+
+        <h3>Ryan Castillo</h3>
+        <p>
+          Ryan is on a mission to make his fellow developers more awesome. He 
+          believes that one of the greatest tragedies in life is when one does 
+          not reach their full potential. He recently started the consultancy 
+          Challenge Accepted where he works side by side with clients to develop 
+          their business model and the necessary software to make them successful.
         </p>
 
       </section>
