Adds link to Ryan's twitter profile

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           Challenge Accepted where he works side by side with clients to develop 
           their business model and the necessary software to make them successful.
         </p>
+        <p>
+          Follow <a href="http://twitter.com/rmcastil">Ryan</a> on Twitter.
+        </p>
 
       </section>
       <footer>
