Changes PostalAddress container from div to span

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
               <li>Time: <meta itemprop="duration" content="PT2H" />18:00-20:00</li>
               <li>
                 <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                  <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                  <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                     Place: 
                     <span itemprop="streetAddress">1657 West Broad Street</span> #3a, 
                     <span itemprop="addressLocality">Richmond</span>, 
                     <span itemprop="addressRegion">VA</span>
-                  </div>
+                  </span>
                   (<a itemprop="url" href="http://goo.gl/maps/HX2PY">map</a>)
                 </div>
               </li>
