Tweaks microdata definition of Meetup.com URL

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   (<a itemprop="url" href="http://goo.gl/maps/HX2PY">map</a>)
                 </div>
               </li>
-              <li>RSVP: <a itemprop="url" href="http://www.meetup.com/804RVA/events/118185912/">Meetup.com</a></li>
+              <li>RSVP: <a itemprop="rsvpUrl" href="http://www.meetup.com/804RVA/events/118185912/">Meetup.com</a></li>
             </ul>
           </p>
 
