Changes Place definition from a div to span

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </li>
               <li>Time: <meta itemprop="duration" content="PT2H" />18:00-20:00</li>
               <li>
-                <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                <span itemprop="location" itemscope itemtype="http://schema.org/Place">
                   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                     Place: 
                     <span itemprop="streetAddress">1657 West Broad Street</span> #3a, 
@@ -48,7 +48,7 @@
                     <span itemprop="addressRegion">VA</span>
                   </span>
                   (<a itemprop="url" href="http://goo.gl/maps/HX2PY">map</a>)
-                </div>
+                </span>
               </li>
               <li>RSVP: <a itemprop="url/rsvp" href="http://www.meetup.com/804RVA/events/118185912/">Meetup.com</a></li>
             </ul>
