Fixes meta tag for address -> url

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <meta itemprop="streetAddress" content="1657 West Broad Street #3a" />
         <meta itemprop="addressLocality" content="Richmond" />
         <meta itemprop="addressRegion" content="VA" />
-        <meta itemprop="url" content="http://goo.gl/maps/HX2PY">
+        <meta itemprop="url" content="http://goo.gl/maps/HX2PY" />
       </span>
 
       <span itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint">
