Fixes meta content typo for contactPoint -> url

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
       <span itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint">
         <meta itemprop="contactType" content="Organizer" />
         <meta itemprop="name" content="Mel Riffe" />
-        <meta itemprop="url" conent="http://melriffe.info" />
+        <meta itemprop="url" content="http://melriffe.info" />
       </span>
       <span itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint">
         <meta itemprop="contactType" content="Organizer" />
         <meta itemprop="name" content="Jeremy Weiland" />
-        <meta itemprop="url" conent="" />
+        <meta itemprop="url" content="" />
       </span>
       <span itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint">
         <meta itemprop="contactType" content="Organizer" />
         <meta itemprop="name" content="Chris Allport" />
-        <meta itemprop="url" conent="" />
+        <meta itemprop="url" content="" />
       </span>
 
       <section>
