Fixes twitter handle typo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a class="buttons github" href="https://github.com/cvreg">GitHub Profile</a></li>
         </ul>
       </header>
-      
+
       <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
         <meta itemprop="streetAddress" content="1657 West Broad Street #3a" />
         <meta itemprop="addressLocality" content="Richmond" />
@@ -99,7 +99,7 @@
             <h3><span itemprop="name">Steven R. Baker</span></h3>
             <span itemprop="description">
             <p>
-              In the third grade, Steven (<a itemprop="url" href="https://twitter.com/srbaker">@bsrbaker</a>) missed an opportunity to corner the Hockey Trivia video game market when he made such a huge mess of his software he had to rewrite it. As with most rewrites, it was a huge failure, and Steven still hasn’t forgiven himself. Since then, he has been obsessed with learning how to produce high quality software, and has been helping teams do just that. Along the way he’s developed tools, delivered talks, and yelled over pints about how to improve software.
+              In the third grade, Steven (<a itemprop="url" href="https://twitter.com/srbaker">@srbaker</a>) missed an opportunity to corner the Hockey Trivia video game market when he made such a huge mess of his software he had to rewrite it. As with most rewrites, it was a huge failure, and Steven still hasn’t forgiven himself. Since then, he has been obsessed with learning how to produce high quality software, and has been helping teams do just that. Along the way he’s developed tools, delivered talks, and yelled over pints about how to improve software.
             </p>
             </span>
           </div>
