fixed location for august

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <span itemprop="location" itemscope itemtype="http://schema.org/Place">
                   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                   Place:
-                    <span itemprop="streetAddress">321 W 7th St</span>,
+                    <span itemprop="streetAddress">1657 W. Broad St.</span>,
                     <span itemprop="addressLocality">Richmond</span>,
                     <span itemprop="addressRegion">VA</span>
                   </span>
-                  (<a itemprop="url" href="http://goo.gl/maps/vQ5nv">map</a>)
+                  (<a itemprop="url" href="http://goo.gl/maps/5a2wg">map</a>)
                 </span>
               </li>
               <li>RSVP: <a itemprop="url/rsvp" href="http://www.meetup.com/804RVA/events/130551212/">Meetup.com</a></li>
