--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <span itemprop="location" itemscope itemtype="http://schema.org/Place">
                   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                   Place:
+                    <span itemprop="placeName">
+                      <a href="http://804rva.com">804RVA</a>
+                    </span>
                     <span itemprop="streetAddress">1657 W. Broad St.</span>,
                     <span itemprop="addressLocality">Richmond</span>,
                     <span itemprop="addressRegion">VA</span>
