adding 804rva site / name to doc

--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
               <li>Time: <meta itemprop="duration" content="PT2H" />18:00-20:00</li>
               <li>
                 <span itemprop="location" itemscope itemtype="http://schema.org/Place">
+		  <a property="url" href="http://804rva.com/">804RVA</a>
                   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                   Place:
-                    <span itemprop="placeName">
-                      <a href="http://804rva.com">804RVA</a>
-                    </span>
                     <span itemprop="streetAddress">1657 W. Broad St.</span>,
                     <span itemprop="addressLocality">Richmond</span>,
                     <span itemprop="addressRegion">VA</span>
