Adds Overstreet's bio 'as-is'

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <h3><span itemprop="name">Matt Overstreet</span></h3>
             <span itemprop="description">
             <p>
+            Matt Overstreet spent many a Saturday begging his Dad to help him compile Unix games from the VAX at Virginia Tech.  Since then he took some time off to learn about humans, including work on a Bachelor of Fine Arts in Acting and Directing.  Tired of the crazy hour and egos in the entertainment industry he returned to the family business as a bit cobbler.  Starting out fixing printers for call centers he decided computers should fix themselves (and filed a patent or two around that idea).  Fortunately, he had a network of  20k+ nodes with which to tinker.  Next came  small business web development.  Then, full circle to lead architect for Cambio.com, the Jonas Groups online content network, TomBrady.com and AliStories.com.</p>
+            <p>
+            He has retired from entertainment a second time and is now working on navigating search and big data.  He has come to realize that Theatre and Technology are the same; what happens on stage is irrelevant, what happens in the audience is key.  
             </p>
             </span>
           </div>
