Fixes a typo in Person's url itemprop

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3><span itemprop="name">Adam Rabung</span></h3>
             <span itemprop="description">
               <p>
-                <a itempprop="url" href="https://twitter.com/adamrabung">Adam</a> has been a Java and Web programmer since the late 90s. He has been gradually switching to Scala over the last few years, and hopes he can avoid Java from here on out.
+                <a itemprop="url" href="https://twitter.com/adamrabung">Adam</a> has been a Java and Web programmer since the late 90s. He has been gradually switching to Scala over the last few years, and hopes he can avoid Java from here on out.
               </p>
             </span>
           </div>
