--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </p>
           </span>
           <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
-            <h3><span itemprop="name">Adam Rabung</span></h3>
+            <h3><span itemprop="name">Daniel Farrell</span></h3>
             <span itemprop="description">
               <p>
                 <a itemprop="url" href="https://twitter.com/danielfarrell">Daniel</a> is a Rubyist who came to our clan through the dreaded PHP route. He taught himself PHP and Javascript to make basic web pages, and then turned himself into a developer while working for himself doing IT support. He dishes Ruby by day at Weinstein Properties, developing mostly internal facing web applications.
